fix overflow issues causing horizontal scrolling on thin width windows

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -124,7 +124,8 @@
 
 .purchase-row {
     padding: 5px 148px;
-    width: 100%;
+    width: 100vw;
+    overflow: hidden;
     height: fit-content;
     position: absolute;
     bottom: 0;
@@ -242,10 +243,14 @@
 }
 
 .main-content {
-    width: 100%;
+    width: 100vw;
     height: fit-content;
     background-image: url("images/scroll-texture.png");
     background-repeat: repeat;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .section-header-container {
